# compare.django

./: .gitignore  README.md  build.sh  db.sqlite3  main.py  manage.py  pyproject.toml  render.yaml
compare/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
tools/: admin.py  filters.py  models.py  orders.py  schema.py
tools/management/commands/: populate_dummy_data.py
tools/migrations/: 0001_initial.py
