[project]
name = "compare-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "django>=6.0.2",
    "django-graphene-filters",
    "factory-boy",
    "graphene-django",
    "gunicorn",
    "uvicorn",
]
